add existing file

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,6 +9,9 @@
 	<h2>Have a Book to Promote?</h2>
 	<h3>Get Book promotions via Amazon and Twitter by <%= link_to "listing your book here", new_book_path %>. More exposure, More Visibility, More Sales. It's Free.</h3> 
 <% end %>
+<!-- <h1 align = "center"> Discover New Titles </h1>
+<h2 align = "center">Great Stories. Unique Perspectives. </h2>
+<br> -->
 
 	<div class = "row">
 
