update existing files

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -90,7 +90,7 @@
  	score: function(){
  		return $(this).attr('data-score')
  	},
- 	path: '/images/ratyrate'
+ 	path: '/assets/'
  });
 
 </script>
@@ -99,7 +99,7 @@
 <script type="text/javascript">
  $('.average_review_rating').raty({
  	readOnly: true,
- 	path: '/images/ratyrate',
+ 	path: '/assets/',
  	score: function(){
  		return $(this).attr('data-score')
  	}
