--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       <%= link_to   "eBookLeaders", root_path, class: "navbar-brand" %>
     </div>
       <ul class = "nav navbar-nav">
+        <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Register", new_user_registration_path %> </li>
         <% if user_signed_in? %>
         <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
@@ -26,6 +27,7 @@
          <li><%= link_to "Login", new_user_session_path %></li>
         <% end %>
       </ul>
+
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "All Books", root_path %></li>
         <li class = "dropdown">
