--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -31,10 +31,15 @@
 
 			<% s = @book.amazon_link %>
 
-			<% s1 = s.split('dp/')[-1] %>
+			<% s1a = s.split('dp/')[-1] %>
+			<% s1 = s1a.split('?psc=1')[-1] %>
 			<% s2 = s1.split("/")[0] %>
 
-			<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
+
+			
+
+			<%= bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
+			<br>
 
 
 			<%= link_to  "  Buy this book on Amazon", bookUrl , target: :_blank %></h2>
