modify  links to existing pages

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,8 +38,8 @@
 
 			
 
-			<%= bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
-			<br>
+			<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
+			
 
 
 			<%= link_to  "  Buy this book on Amazon", bookUrl , target: :_blank %></h2>
