update existing files

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -318,3 +318,14 @@ p.alert, p.notice {
 
 }
 
+.book-submit-promo
+{
+	border-color: lightgray;
+	border-style: solid;
+	background: #f0f0f0;
+	border-radius: 10px;
+	padding: 9px;
+}
+
+
+
