add book pricesf

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -10,6 +10,8 @@
  	<%= f.input :details, label: "Description" %> 
  	<%= f.input :author %> 
 	<%= f.input :amazon_link, label: "Add the Amazon link for your book to get more visibility and sales." %>
+ 	<%= f.input :ebookprice,  label: "Amazon Ebook Price" %> 
+ 	<%= f.input :bookprice,  label: "Amazon Print Price"%> 
  	<%= f.button :submit, :class => "btn-custom2" %>
 
  	  <% end %>
