--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,6 +7,9 @@
 	<%= f.input :details %> 
 	<%= f.input :author %> 
     <%= f.input :amazon_link %>
+    <%= f.input :ebookprice,  label: "Amazon Ebook Price" %> 
+ 	<%= f.input :bookprice, label: "Amazon Price"%> 
+
 	<%= f.button :submit %>
 
 	  <% end %>
