--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     </div>
       <ul class = "nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Register", new_user_registration_path %> </li>
+        <li><%= link_to "Sign Up", new_user_registration_path %> </li>
         <% if user_signed_in? %>
         <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
          <% else %>
@@ -38,8 +38,11 @@
        </ul>
         </li>
 
-        <% if user_signed_in? %>
-          <li><%= link_to "Add Your Book", new_book_path %></li> 
+       
+          <li><%= link_to "Add Your Book", new_book_path %></li>
+        <% if user_signed_in? %> 
+            <li><%= link_to "Edit Profile", edit_user_registration_path %></li> 
+
 
         <% end %>
 
