--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,4 +1,11 @@
-<h4><b><%= review.user.name %></b></h4>
+<% if review.user.author_bio.present? %>
+	<h4><b><%= review.user.name %> </b>
+		
+<% else %>
+	<h4><b><%= review.user.name %></b></h4>
+
+<% end %>
+
 <div class = "review">
 	<div class = "review-rating" data-score = "<%= review.rating %>"></div>
 		<p class = "review-comment"><%= review.comment %></p>
