--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -5,7 +5,7 @@
 
   <div class="form-inputs">
      
-    <%= f.input :name, autofocus: true %>
+    <%= f.input :name, required: true, autofocus: true  %>
      
         <br/>
     <%= f.input :email, required: true, autofocus: true %>
@@ -13,6 +13,12 @@
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
+
+    
+        <br/>
+
+    <%= f.input :author_bio, autofocus: true , label: "Enter your Biography"%>
+     
 
     <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
     <%= f.input :password_confirmation, required: false %>
