update existing files

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,7 +8,7 @@
 	<%= f.input :author %> 
     <%= f.input :amazon_link %>
     <%= f.input :ebookprice,  label: "Amazon Ebook Price" %> 
- 	<%= f.input :bookprice, label: "Amazon Price"%> 
+ 	<%= f.input :bookprice, label: "Amazon Print Price" %> 
 
 	<%= f.button :submit %>
 
