--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,8 +6,20 @@
 
 	<div class = "col-md-8">  
 			<div class = "bookInfo">
-			<h2 class = "bookTitle"><%= @book.titleLstring %></h2>	
-			<h3 class = "bookAuthor"><span>From: </span><%= @book.author %></h3>
+			<h2 class = "bookTitle"><%= @book.titleLstring %></h2>
+
+
+			<% if @book.user.author_bio.present? %>
+				<h3 class = "bookAuthor"><span>From: </span>
+					<%= link_to "#{@book.author}", user_path(@book.user_id) %></h3>
+					
+
+				<% else %>
+
+				<h3 class = "bookAuthor"><span>From: </span><%= @book.author %></h3>
+			<% end %>
+
+
 			<% if 	@book.genre.present? %>
 			<h4>Genre: <%= @book.genre.name %></h4>
 			<% end %>  
