--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -113,8 +113,9 @@
 		
 		<div class = "links btn-group">
 
+		<%= link_to 'Back', url_for(:back), class: "btn btn-custom" %>
 
-		<%= link_to "Back", root_path, class: "btn btn-custom" %>
+		
 
 			<% if user_signed_in? %>
 			<% if @book.user_id == current_user.id %>
