update existing files

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,10 +1,12 @@
-<% if review.user.reviewer_bio.present? %>
+
+<% if  review.user.author_bio.present? %>
+			
+		<h4><b><%= link_to "#{review.user.name}", user_path(review.user_id) %></b></h4>
+
+<% elsif review.user.reviewer_bio.present? %>
 
 	<h4><b><%= link_to "#{review.user.name}", user_path(review.user_id) %></b></h4> 
 
-<% elsif  review.user.author_bio.present? %>
-			
-		<h4><b><%= link_to "#{review.user.name}", user_path(review.user_id) %></b></h4>
 		
 <% else %>
 
