--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,12 @@
+<!-- This file is used for the profile page -->
 <div class =  "bookInfo">
-				<h1><b>Profile/Bio:</b></h1>  
+				<h1>Profile/Bio:</h1>  
 				
 				
-<h1>Name: <%= @user.name %></h1>
+<h2> <%= @user.name %></h2>
 <% if @user.author_bio.present? %>
 
-	<h3>Bio:</h3> <h4><%= @user.author_bio %></h4>
+	 <h4><%= @user.author_bio %></h4>
 
 <% else %>
 
