update existing files

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -3,9 +3,8 @@
 			
 		<h4><b><%= link_to "#{review.user.name}", user_path(review.user_id) %></b></h4>
 
-<% end %>
 
-<% if review.user.reviewer_bio.present? %>
+<% elsif review.user.reviewer_bio.present? %>
 
 	<h4><b><%= link_to "#{review.user.name}", user_path(review.user_id) %></b></h4> 
 		
