--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,7 +38,7 @@
 			<div><p><p><p><p></div>
 			  
 				<div class =  "bookInfo">
-				<h4><b>Amazon Link:</b>   
+				<h4><b>Amazon Link: 
 				<% if @book.amazon_link.present? %>
 
 				<% s = @book.amazon_link %>
@@ -50,8 +50,8 @@
 				<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
 				
 				
-				<%= link_to  "  Get a copy from Amazon", bookUrl , target: :_blank %></h2>
-				<% end %>
+				<%= link_to  "  Get a copy from Amazon", bookUrl , target: :_blank %></b></h2>
+				<% end %>  
 
 				<% if @book.ebookprice.present? %>
 					<h4><b>Kindle eBook: </b>
