--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -47,10 +47,9 @@
 				<% s1 = s1a.split('?psc=1')[-1] %>
 				<% s2 = s1.split("/")[0] %>
 
-				 <% s3 = s2.scan(/\d+/).first  %>
+				<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
+				<% bookUrl = @book.amazon_link %>
 
-				<% bookUrl = "http://www.amazon.com/dp/#{s3}/?tag=ebookleaders1-20" %>
-				
 				
 				<%= link_to  "  Get a copy from Amazon", bookUrl , target: :_blank %></b></h2>
 				<% end %>  
