--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -49,9 +49,10 @@
 
 				<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
 				
-				<% bookUrl =  @book.amazon_link %>
+				<% if bookUrl.include? "redir" %> 
+					<% bookUrl =  @book.amazon_link %>
+				<% end %> 
 
-				
 				<%= link_to  "  Get a copy from Amazon", bookUrl , target: :_blank %></b></h2>
 				<% end %>  
 
