update existing files

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -49,7 +49,7 @@
 
 				<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
 				
-				<% if bookUrl.include? "redir" %> 
+				<% if bookUrl.include? "mob" %> 
 					<% bookUrl =  @book.amazon_link %>
 				<% end %> 
 
