--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -48,8 +48,11 @@
 				<% s2 = s1.split("/")[0] %>
 
 				<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
-				
 
+				<% if bookUrl.include? "ref" %> 
+				 	<% bookUrl = @book.amazon_link %>
+				 <% end %> 
+				
 				
 				<%= link_to  "  Get a copy from Amazon", bookUrl , target: :_blank %></b></h2>
 				<% end %>  
