--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -43,14 +43,8 @@
 
 				<% s = @book.amazon_link %>
 
-				<% s1a = s.split('dp/')[-1] %>
-				<% s1 = s1a.split('?psc=1')[-1] %>
-				<% s2 = s1.split("/")[0] %>
-
-				<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
-
-				
-				 	<% bookUrl = @book.amazon_link %>
+				 <% bookUrl = "http://www.amazon.com/dp/#{s}/?tag=ebookleaders1-20" %>
+				 	
 				
 				
 				
