--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -44,10 +44,11 @@
 				<% s = @book.amazon_link %>
 
 				<% s1a = s.split('dp/')[-1] %>
-				<% s2 = s1a.remove('?psc=1') %>
-				<% s3 = s2.remove('https') %>
+				<% s2 = s1a.split('d/')[-1] %>
+				<% s3 = s2.remove('?psc=1') %>
+				<% s4 = s3.remove('https') %>
 
-				<% bookUrl = "http://www.amazon.com/dp/#{s3}/?tag=ebookleaders1-20" %>
+				<% bookUrl = "http://www.amazon.com/dp/#{s4}/?tag=ebookleaders1-20" %>
 
 				
 				 	
