update existing files

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -40,20 +40,23 @@
 				<div class =  "bookInfo">
 				<h4><b>Amazon Link: 
 				<% if @book.amazon_link.present? %>
-
-					<% s = @book.amazon_link %>
-					<% s1a = s.split('dp/')[-1] %>
-					<% s1 = s1a.split('?psc=1')[-1] %>
-					<% s2 = s1.split("/")[0] %>
-					
-					<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
-
 					<% if @book.amazon_link.include? "mobile_desktop"%>
-						<% bookUrl = @book.amazon_link %>
-					<% end %>
+							<% bookUrl = @book.amazon_link %>
+						
+						<% else %>
+
+						<% s = @book.amazon_link %>
+						<% s1a = s.split('dp/')[-1] %>
+						<% s1 = s1a.split('?psc=1')[-1] %>
+						<% s2 = s1.split("/")[0] %>
+						
+						<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
+
+						
+						<% end %>
+						
+						<%= link_to  "  Get a copy from Amazon", bookUrl , target: :_blank %></b></h2>
 					
-					
-					<%= link_to  "  Get a copy from Amazon", bookUrl , target: :_blank %></b></h2>
 				<% end %>  
 
 				<% if @book.ebookprice.present? %>
