--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -40,7 +40,7 @@
 				<div class =  "bookInfo">
 				<h4><b>Amazon Link: 
 				<% if @book.amazon_link.present? %>
-					<% if @book.amazon_link.include? "mobile_desktop"%>
+					<% if @book.amazon_link.include? "inferno"%>
 							<% bookUrl = @book.amazon_link %>
 						
 						<% else %>
@@ -56,7 +56,7 @@
 						<% end %>
 						
 						<%= link_to  "  Get a copy from Amazon", bookUrl , target: :_blank %></b></h2>
-					
+
 				<% end %>  
 
 				<% if @book.ebookprice.present? %>
