update existing files

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -40,7 +40,7 @@
 				<div class =  "bookInfo">
 				<h4><b>Amazon Link: 
 				<% if @book.amazon_link.present? %>
-					<% if @book.amazon_link.include? "B01NBK250E"%>
+					<% if @book.amazon_link.include? "2033"%>
 							<% bookUrl = @book.amazon_link %>
 						
 						<% else %>
