--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -40,7 +40,8 @@
 				<div class =  "bookInfo">
 				<h4><b>Amazon Link: 
 				<% if @book.amazon_link.present? %>
-					<% if @book.amazon_link.include? "2033"%>
+
+					<% if @book.author ==  "Michael Compton" %>
 							<% bookUrl = @book.amazon_link %>
 						
 						<% else %>
@@ -52,7 +53,7 @@
 						
 						<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
 						<!-- Next line is not because one affilite link fails. This deactivates affiliate link for now. -->
-						
+
 						<% bookUrl = @book.amazon_link %>
 						
 					<% end %>
