update existing files

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -5,10 +5,10 @@
  <p><p>
 
  	<%= f.file_field :book_imgage %>
-	
+
  	<%= f.input :titleLstring, label: "Title" %>
  	<%= f.input :details, label: "Description" %> 
- 	<%= f.input :author %> 
+ 	<%= f.input :author, label: "Authors Name" %> 
 	<%= f.input :amazon_link, label: "Add the Amazon link for your book to get more visibility and sales." %>
  	<%= f.input :ebookprice,  label: "Amazon Ebook Price" %> 
  	<%= f.input :bookprice,  label: "Amazon Print Price"%> 
