--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -120,19 +120,22 @@
 
 		
 		<div class = "links btn-group">
+		
 
 		<%= link_to 'Back', url_for(:back), class: "btn btn-custom" %>
 
 		
 
-			<% if user_signed_in? %>
-			<% if @book.user_id == current_user.id %>
+			
+			<% if can? :update, @book %>
+				<%= link_to "Edit Book", edit_book_path(@book), class: "btn btn-custom"%>
+			<% end %>
+			 
+			<% if can? :destroy, @book %>
+				<%= link_to "Delete Book", book_path(@book), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-custom" %>
+			<% end %>
 
-			<%= link_to "Edit Book", edit_book_path(@book), class: "btn btn-custom"%>
-			<%= link_to "Delete Book", book_path(@book), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-custom" %>
-			<% end %>
-			<% end %>
-		
+			
 		</div>	
 <p><br>		
 </div>		
