update existing files

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,11 +1,15 @@
  <%= simple_form_for @book, :html => {:multipart => true} do |f| %>
-
- <%= select_tag(:genre_id, options_for_select(@genres), :prompt => "Selecet a Genre") %>
+	<br>
+ 	<h4><b>Select a Book Genre:</b></h4>
+ <%= select_tag(:genre_id, options_for_select(@genres), :prompt => "Selecet a Genre", :class => "col-md-4 form-for") %>
 
  <p><p>
-
- 	<%= f.file_field :book_imgage %>
-
+ 	<br>
+ 	<br>
+ 	<h4><b>Add the Book Image:</b></h4>
+ 	<%= f.file_field :book_imgage,  :class => "col-md-4 form-for"%>
+ 	<br>
+ 	<br>
  	<%= f.input :titleLstring, label: "Title" %>
  	<%= f.input :details, label: "Description" %> 
  	<%= f.input :author, label: "Authors Name" %> 
