update existing files

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,24 +38,29 @@
 			<div><p><p><p><p></div>
 			  
 				<div class =  "bookInfo">
-				<h4><b>Amazon Link: 
+				
 				<% if @book.amazon_link.present? %>
 
 				<% if @book.amazon_link.include?("kindlescout") %>
 						<% bookUrl = @book.amazon_link %>
+						<h4><b>Kindle Scout: 
+						<%= link_to  " Nominate on Kindle Scout", bookUrl , target: :_blank %></b></h2>
+
 				<% else %>
 
 						<% s = @book.amazon_link %>
 						<% s1a = s.split('dp/')[-1] %>
 						<% s1 = s1a.split('?psc=1')[-1] %>
 						<% s2 = s1.split("/")[0] %>
-						
+						<h4><b>Amazon Link: 
 						<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
+
+						<%= link_to  "  Get a copy from Amazon", bookUrl , target: :_blank %></b></h2>
 						
 				<% end %>		
 					
 						
-						<%= link_to  "  Get a copy from Amazon", bookUrl , target: :_blank %></b></h2>
+						
 
 				<% end %>  
 
