--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,11 @@
 <!-- This file is used for the profile page -->
 <div class =  "bookInfo">
 				<h1>Profile/Bio:</h1>  
-				
-				
+
+<% if @user.avatar.present? %>		
+<%= image_tag @user.avatar %>
+<% end %>
+
 <h2> <%= @user.name %></h2>
 <% if @user.author_bio.present? %>
 
