update existing files

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -100,7 +100,7 @@
 			  				<div class = "links btn-group">
 			  				<h3> Reviewer or Author? </br>
 			  					 <%= link_to "Add Your Book", new_book_path, class: "btn btn-custom" %> &nbsp; &nbsp;
-			  					  <%= link_to "Add Your Bio", edit_user_registration_path, class: "btn btn-custom" %> </h3></div>
+			  					  <%= link_to "Add Your Bio and Pic", edit_user_registration_path, class: "btn btn-custom" %> </h3></div>
 			  			</div>
 
 
