update existing files

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,10 @@
+<p>Welcom to BookClubPro, formerly known as eBookLeaders</p>
 <h4 class = "book-submit-promo">Is your book on Amazon? 
 	 <% if user_signed_in? %>
-	 	<b><%= link_to " Add your Amazon books to eBookLeaders. ", 
+	 	<b><%= link_to " Add your Amazon books to BookClubPro. ", 
 	 	 new_book_path %></b>
 	 <% else %>
-	 	<b><%= link_to " Add your Amazon books to eBookLeaders. ", 
+	 	<b><%= link_to " Add your Amazon books to BookClubPro. ", 
 		  new_user_registration_path %></b>
 	 <% end %>
   Get more exposure. It's free.</h4> 
