--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>eBookLeaders</title>
+    <title>BookClubPro</title>
 
     <%= csrf_meta_tags %>
 
@@ -16,7 +16,8 @@
       <div class = "navbar-header"> 
        <div class = "navbar-header navbar-logo"> <%= image_tag('books.png', size: "50x50") %>
        </div>
-      <%= link_to   "eBookLeaders", root_path, class: "navbar-brand" %>
+      <%= link_to   "BookClubPro", root_path, class: "navbar-brand"  %>
+     
     </div>
       <ul class = "nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
