update existing files

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<p>Welcome to BookClubPro, formerly eBookLeaders</p>
+<p>BookClubPro, formerly eBookLeaders</p>
 <h4 class = "book-submit-promo">Is your book on Amazon? 
 	 <% if user_signed_in? %>
 	 	<b><%= link_to " Add your Amazon books to BookClubPro. ", 
