update existing files

--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -18,6 +18,7 @@
   
     
         <br/>
+    <%= f.input :twitter_handle, autofocus: true, label: "Twitter Handle (Optional, but adding will help exposure)" %>    
 
     <%= f.input :author_bio, autofocus: true , label: "Author Biography (leave blank if you are a reviewer)"%>
 
