--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -6,7 +6,7 @@
  <p><p>
  	<br>
  	<br>
- 	<h4><b>Add the Book Image:</b></h4>
+ 	<h4><b>Add Your Book Image:</b></h4>
  	<%= f.file_field :book_imgage,  :class => "col-md-4 form-for"%>
  	<br>
  	<br>
