--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -15,8 +15,10 @@
  	<%= f.file_field :book_imgage,  :class => "col-md-4 form-for"%>
  	<br>
  	<br>
-
-
+ 	<h4><b>Add Your Book Teaser: </b>(optional, can be added later. This will be sent with tweets.)</h4>
+ 	<%= f.file_field :book_teaser,  :class => "col-md-4 form-for"%>
+ 	<br>
+ 	<br>
 
 	<%= f.input :titleLstring, label: "Title" %>
 	<%= f.input :details %> 
