--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,13 @@
       <div class = "navbar-header"> 
        <div class = "navbar-header navbar-logo"> <%= image_tag('books.png', size: "50x50") %>
        </div>
+     <!--  <%= link_to   "Book", root_path, class: "navbar-brand yellow"  %>
+      <%= link_to   "Club", root_path, class: "navbar-brand"  %> 
+      <%= link_to   "Pro", root_path, class: "navbar-brand yellow"  %> -->
+
       <%= link_to   "BookClubPro", root_path, class: "navbar-brand"  %>
      
-    </div>
+      </div>
       <ul class = "nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Sign Up", new_user_registration_path %> </li>
