update existing files

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -180,10 +180,12 @@ p.alert, p.notice {
 
 
 .book-teaser{
+	padding-top: 15px;
+	padding-bottom: 15px;
 	display: block;
     margin: 0 auto;
-	height: 300px;
-	width: 688px;
+	height: 346px;
+	width: 670px;
 	
 }
 
