--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -13,7 +13,7 @@
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
-    <h4><b>Add Your Profile Pic/Avatar Image:</b></h4>
+    <h4><b>Add Yourfaviconfavicon.ico Profile Pic/Avatar Image:</b></h4>
         <%= f.file_field :avatar %>
   
     
