--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,15 @@
   <nav class= "navbar navbar-default"> 
     <div class= "container">
       <div class = "navbar-header"> 
-       <div class = "navbar-header navbar-logo"> <%= image_tag('books.png', size: "50x50") %>
+        <%= link_to root_path do %>
+       <div class = "navbar-header navbar-logo"> <%= image_tag('BookClubProHeader2.png', size: "300x55") %>
+        <% end %>
        </div>
      <!--  <%= link_to   "Book", root_path, class: "navbar-brand yellow"  %>
       <%= link_to   "Club", root_path, class: "navbar-brand"  %> 
       <%= link_to   "Pro", root_path, class: "navbar-brand yellow"  %> -->
 
-      <%= link_to   "BookClubPro", root_path, class: "navbar-brand"  %>
+      
      
       </div>
       <ul class = "nav navbar-nav">
