--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <%= favicon_link_tag 'favicon.ico' %>
-    <title>BookClubPro</title>
+    <title>BookClubPro Books uploaded by Authors</title>
 
     <%= csrf_meta_tags %>
 
